--- a/index.html
+++ b/index.html
@@ -225,23 +225,62 @@
                 Completed Projects
             </h2>
             <div class="bento-grid">
-                <div class="bento-item">
-                    1
+                <a href="#" class="bento-item">
+                    <img src="./images/bento-1.jpg" alt="BGCCI" width="100%">
+                </a>
+                <a href="#" class="bento-item">
+                    <img src="./images/bento-2.jpg" alt="Churhview" width="100%">
+                </a>
+                <a href="#" class="bento-item">
+                    <img src="./images/bento-3.jpg" alt="Harley" width="100%">
+                </a>
+                <a href="#" class="bento-item">
+                    <img src="./images/bento-5.jpg" alt="Bunbury" width="100%">
+                </a>
+                <a href="#" class="bento-item">
+                    <img src="./images/bento-6.jpg" alt="Running" width="100%">
+                </a>
+                <a href="#" class="bento-item">
+                    <img src="./images/bento-7.jpg" alt="School" width="100%">
+                </a>
+            </div>
+        </section>
+
+        <section class="chatbot container">
+            <h2>
+                <small>
+                    Talk to me
+                </small>
+                Chatbot
+            </h2>
+            <div class="chatbot-blue">
+                <div class="chat-info">
+                    <h3>Azure AI Chatbot</h3>
+                    <p>
+                        I've put together a chatbot here which knows all my skills,
+                        work experience and has a copy of my CV/Resume. You can use it
+                        to ask questions about me to get a better idea of who I am and 
+                        what I've done.
+                    </p>
+                    <p>
+                        You can also download my resume here if you want to take a look at it.
+                        I'm currently looking for a new opportunity. So if you have a project
+                        you think I'd be a good fit for, please feel free to get in touch with me!
+                    </p>
+                    <a href="#">Download Resume</a>
                 </div>
-                <div class="bento-item">
-                    2
-                </div>
-                <div class="bento-item">
-                    3
-                </div>
-                <div class="bento-item">
-                    4
-                </div>
-                <div class="bento-item">
-                    5
-                </div>
-                <div class="bento-item">
-                    6
+                <div class="chat-box">
+                    <div class="scroll-area">
+                        <ul id="chat-log">
+                            <li>
+                                <span class="avatarbot">AI</span>
+                                <div class="message">
+                                    Hi, I'm a friendly chatbot that lets you interact with
+                                    this portfolio and CV. How can I help?
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
